--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,20 @@
   },
   "require-dev": {
     "endroid/qrcode": "~1.9",
-    "codeception/codeception": "*"
+    "codeception/codeception": "*",
+    "phpunit/phpunit": "<9.0.0",
+    "mockery/mockery": "^1.3",
+    "friendsofphp/php-cs-fixer": "^2.16",
+    "monolog/monolog": "^2.0"
   },
   "autoload": {
     "psr-4": {
       "Payment\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Test\\EasyPay\\": "tests/"
     }
   }
 }
